# Conslot-V2

./: README.md
Conslot/: index.html  package-lock.json  package.json
backend/: Cargo.toml
smart-contract/: Move.toml
smart-contract/sources/: smart.move
smart-contract/tests/: smart_tests.move
