[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
 actix-cors = "0.7.1"
    actix-web = "4.13.0"
    anyhow = "1.0.102"
    axum = { version = "0.8.8", features = ["multipart"] }
    axum-extra = { version = "0.12.5", features = ["cookie"] }
    base64 = "0.22.1"
    chrono = { version = "0.4.44", features = ["serde"] }
    dashmap = "6.1.0"
    dotenvy = "0.15.7"
    futures-util = "0.3.32"
    image = "0.25.10"
    infer = "0.19.0"
    jsonwebtoken = "10.3.0"
    moka = { version = "0.12.15", features = ["future"] }
    multer = "3.1.0"
    once_cell = "1.21.4"
    reqwest = { version = "0.12.10", features = ["json", "multipart", "stream", "cookies", "gzip", "brotli", "deflate", "rustls-tls", "blocking", "socks"] }
    resend-rs = "0.12.0"
    serde = { version = "1.0.228", features = ["derive"] }
    serde_json = "1.0.149"
    sha2 = "0.10.9"
    sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
    time = "0.3.47"
    tokio = { version = "1.50.0", features = ["full"] }
    tokio-rustls = "0.26.4"
    tower = "0.5.3"
    tower-http = { version = "0.6.8", features = ["cors", "set-header", "trace"] }
    tracing = "0.1.44"
    tracing-subscriber = "0.3.23"
    hyper = { version = "0.14", features = ["server", "tcp"] }
    urlencoding = "2.1.3"
    uuid = { version = "1.22.0", features = ["serde", "v4"] }
    webp = "0.3.1"